Fix singular post navigation z-index, background wave trim was overlapping on short posts

--- a/assets/styles/sass/components/navigation/_navigation.scss
+++ b/assets/styles/sass/components/navigation/_navigation.scss
@@ -1,4 +1,5 @@
 .post-navigation {
+	z-index: 10;
 
 	.nav-links {
 		display: flex;
